@@ -16,6 +16,7 @@ trunk
 * added more descriptive error message when thresholds are not sorted
 * checking in a dgemm that does R 2.11.1 unsafe NaN transformations
 * return NA in mxVersion() if "OpenMx" cannot be found
+* fix infinite loop in objective function transformations
 
 Release 1.0.0-1448 (September 30, 2010)
 =======================================
